fix: added vertical scrollbar

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -489,6 +489,17 @@
   }
 }
 
+@media (max-width: 460px){
+  .dropdown-notification{
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 370px){
+  .dropdown-notification{
+    max-width: 270px;
+  }
+}
 // notification page
 .notification-icon {
   font-size: 20px;
